src/style_sheets/Project.css
.project {
   padding-top: 80px;
   display: grid;
}
.body-text {
   display: grid;
   grid-row: 1/2;
   grid-template-columns: auto 3fr;
   color: #F8F8F8;
   position: relative;
   margin-left: 30px;
   margin-right: 10px;
   margin-top: -20px;
   padding: 20px;
   border-radius: 20px;
   max-height: 700px;
   margin-bottom: 50px;
}

.body-text > p {
   margin-top: 0px;

}
.img-carousel {
   grid-row: 3/4;

}
a, a:visited, a:hover {
   font-size: 15px;
   color: white;
   text-decoration: none;
}
.title-arrow {
   display: inline-block;
   max-height: 20px;
   grid-column: 1/2;
   position: relative;
   top: 20px;
   margin-right: 10px;
}
.title {
   display: inline-block;
   grid-column: 2/3;

}

.title > hr {
   opacity: 0.5;
}
.project-title {
   font-size: 4vw;
}
@media screen and (min-width: 1000px){
   .project {

   }
   .img-carousel {
      margin-top: 0;
      grid-row: 1/2;
      margin-right: 0px;
      max-width: 650px;
   }
   .body-text {
      grid-column: 1/2;
      grid-row: 1;


   }
   .body-text > p {
      font-size: 1.2vw;
   }

   .project-title {
      font-size: 2vw;
   }
}

